fix servers in folders having too much space between each other

--- a/AlanWalkerTheme/visual-refresh/trivia.css
+++ b/AlanWalkerTheme/visual-refresh/trivia.css
@@ -120,6 +120,7 @@
           height: var(--guildbar-folder-size) !important;
         }
       }
+      .folderGroup__48112 .stack_dbd263 .listItem__650eb,
       .tutorialContainer__650eb,
       .tutorialContainer__650eb + .listItem__650eb,
       .scroller_ef3116 > .stack_dbd263 > .listItem__650eb {
